// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs> adds tabs 1`] = `
"<div class=\\"hig__global-nav\\">
    <!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
        <!--TOPNAV-->
        <div class=\\"hig__global-nav__sub-nav\\">
    <div class=\\"hig__global-nav__sub-nav__module-indicator\\">
        <div class=\\"hig__global-nav__sub-nav__module-indicator__icon\\">#</div>
        <div class=\\"hig__global-nav__sub-nav__module-indicator__name\\">Module Name</div>
    </div>
    <div class=\\"hig__global-nav__sub-nav__tabs\\">
    <div class=\\"hig__global-nav__sub-nav__tabs__tab\\" title=\\"Hello\\">Hello</div><div class=\\"hig__global-nav__sub-nav__tabs__tab\\" title=\\"There\\">There</div><div class=\\"hig__global-nav__sub-nav__tabs__tab\\" title=\\"World\\">World</div><div class=\\"hig__global-nav__sub-nav__tabs__tab\\" title=\\"Yes\\">Yes</div><!--TAB-->
</div><!--TABS-->
    <div class=\\"hig__global-nav__sub-nav__module-indicator\\">
        <div class=\\"hig__global-nav__sub-nav__module-indicator__icon hig__global-nav__sub-nav__spacer\\">#</div>
        <div class=\\"hig__global-nav__sub-nav__module-indicator__name hig__global-nav__sub-nav__spacer\\">Module Name</div>
    </div>
</div><!--SUBNAV-->
        <div class=\\"hig__global-nav__slot\\">
            <!--SLOT-->
        </div>
    </div>
</div>"
`;

exports[`<Tabs> removes tabs 1`] = `
"<div class=\\"hig__global-nav\\">
    <!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
        <!--TOPNAV-->
        <div class=\\"hig__global-nav__sub-nav\\">
    <div class=\\"hig__global-nav__sub-nav__module-indicator\\">
        <div class=\\"hig__global-nav__sub-nav__module-indicator__icon\\">#</div>
        <div class=\\"hig__global-nav__sub-nav__module-indicator__name\\">Module Name</div>
    </div>
    <div class=\\"hig__global-nav__sub-nav__tabs\\">
    <div class=\\"hig__global-nav__sub-nav__tabs__tab\\" title=\\"Updated Tabs\\">Updated Tabs</div><!--TAB-->
</div><!--TABS-->
    <div class=\\"hig__global-nav__sub-nav__module-indicator\\">
        <div class=\\"hig__global-nav__sub-nav__module-indicator__icon hig__global-nav__sub-nav__spacer\\">#</div>
        <div class=\\"hig__global-nav__sub-nav__module-indicator__name hig__global-nav__sub-nav__spacer\\">Module Name</div>
    </div>
</div><!--SUBNAV-->
        <div class=\\"hig__global-nav__slot\\">
            <!--SLOT-->
        </div>
    </div>
</div>"
`;

exports[`<Tabs> renders tabs 1`] = `
"<div class=\\"hig__global-nav\\">
    <!--SIDENAV-->
    <div class=\\"hig__global-nav__container\\">
        <!--TOPNAV-->
        <div class=\\"hig__global-nav__sub-nav\\">
    <div class=\\"hig__global-nav__sub-nav__module-indicator\\">
        <div class=\\"hig__global-nav__sub-nav__module-indicator__icon\\">#</div>
        <div class=\\"hig__global-nav__sub-nav__module-indicator__name\\">Module Name</div>
    </div>
    <div class=\\"hig__global-nav__sub-nav__tabs\\">
    <div class=\\"hig__global-nav__sub-nav__tabs__tab hig__global-nav__sub-nav__tabs__tab--active\\" title=\\"Hello\\">Hello</div><div class=\\"hig__global-nav__sub-nav__tabs__tab\\" title=\\"World\\">World</div><!--TAB-->
</div><!--TABS-->
    <div class=\\"hig__global-nav__sub-nav__module-indicator\\">
        <div class=\\"hig__global-nav__sub-nav__module-indicator__icon hig__global-nav__sub-nav__spacer\\">#</div>
        <div class=\\"hig__global-nav__sub-nav__module-indicator__name hig__global-nav__sub-nav__spacer\\">Module Name</div>
    </div>
</div><!--SUBNAV-->
        <div class=\\"hig__global-nav__slot\\">
            <!--SLOT-->
        </div>
    </div>
</div>"
`;
